# cc-tracing-hooks

./: .gitignore  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.github/workflows/: codeql.yml  publish.yml  scorecard.yml
docs/: DEVELOPMENT.md  RELEASING.md
docs/adr/: 0001-tool-support-requires-observable-session-context.md  0002-trace-state-commit-on-success-only.md
src/otel_hooks/: cli.py  config.py  hook.py  settings.py
src/otel_hooks/providers/: __init__.py  common.py  datadog.py  factory.py  langfuse.py  otlp.py
src/otel_hooks/tools/: __init__.py  claude.py  cline.py  codex.py  copilot.py  cursor.py  gemini.py  kiro.py  opencode.py
tests/: test_cli_behavior.py  test_hook_integration.py  test_hook_payload_adapter.py  test_providers_contract.py  test_tools_codex.py  test_tools_idempotency.py  test_tools_registry_and_config.py
