[project]
name = "otel-hooks"
version = "0.6.0"
description = "AI coding tools tracing hooks for observability (Langfuse, OTLP, and more)"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "tomli-w>=1.2.0",
]

[project.optional-dependencies]
langfuse = ["langfuse"]
otlp = [
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]
datadog = ["ddtrace"]

[project.scripts]
otel-hooks = "otel_hooks.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
